--- a/hoop/UI/Views/ChatHeaderView.xib
+++ b/hoop/UI/Views/ChatHeaderView.xib
@@ -35,7 +35,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Qpw-0z-MdL" firstAttribute="leading" secondItem="u1C-w4-FVV" secondAttribute="trailing" constant="8" id="12T-2p-QBl"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Qpw-0z-MdL" secondAttribute="trailing" constant="15" id="Ecb-jE-VEP"/>
