--- a/hoop/UI/Base.lproj/Main.storyboard
+++ b/hoop/UI/Base.lproj/Main.storyboard
@@ -573,6 +573,9 @@
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="bonjour"/>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="triggerEtHoop:" destination="jFe-Ul-LRg" eventType="touchUpInside" id="NfJ-YP-IcF"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="640-35-e2Z" userLabel="Cartouche">
                                 <rect key="frame" x="0.0" y="44" width="414" height="45"/>
